--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "server.ts",
-        "use": "@vercel/node"
-      }
+     {
+      "src": "app.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
+     }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "server.ts"
-      }
+     {
+      "src": "/(.*)",
+      "dest": "app.js"
+     }
     ]
-  }
+   }
