--- a/env.example
+++ b/env.example
@@ -2,4 +2,5 @@ PORT=8080
 DATABASE=mongodb://localhost:27017/medicare
 SUPER_SECRET_KEY="ADOLF_HIT_HER____MAHATMA_BOMBING____VLADMIR_SHOOTING"
 AUTH_MAIL=sandeepkherkatary123@outlook.com
-AUTH_PASS=Sandeep2000@
+AUTH_PASS=Sandeep
+SERVER_URL=YOUR SERVER URL
