--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.16.0",
